k8s-config-repo/ai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: education-ai-api
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: education-ai-api
  template:
    metadata:
      labels:
        app: education-ai-api
    spec:
      containers:
        - name: education-ai-api
          image: harishdell/els-ai-education-ai-api:sha-4c6b65c
          imagePullPolicy: Always
          ports:
            - containerPort: 4003
          readinessProbe:
            httpGet:
              path: /health
              port: 4003
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4003
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: education-ai-api
  namespace: els-ai
spec:
  selector:
    app: education-ai-api
  ports:
    - name: http
      port: 4003
      targetPort: 4003
