k8s-config-repo/assignment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment-service
  template:
    metadata:
      labels:
        app: assignment-service
    spec:
      containers:
        - name: assignment-service
          image: harishdell/els-ai-assignment-service:e513046218fabbcd81f8e683d2e2e586c88bcb26
          imagePullPolicy: Always
          ports:
            - containerPort: 4011
          readinessProbe:
            httpGet:
              path: /health
              port: 4011
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4011
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: assignment-service
  namespace: els-ai
spec:
  selector:
    app: assignment-service
  ports:
    - name: http
      port: 4011
      targetPort: 4011
