k8s-config-repo/classroom-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classroom-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classroom-service
  template:
    metadata:
      labels:
        app: classroom-service
    spec:
      containers:
        - name: classroom-service
          image: harishdell/els-ai-classroom-service:6ff77a0b90972e33082f72499a22d11bf151932c
          imagePullPolicy: Always
          ports:
            - containerPort: 4006
          readinessProbe:
            httpGet:
              path: /health
              port: 4006
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4006
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: classroom-service
  namespace: els-ai
spec:
  selector:
    app: classroom-service
  ports:
    - name: http
      port: 4006
      targetPort: 4006
