k8s-config-repo/content-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
        - name: content-service
          image: harishdell/els-ai-content-service:9ae307564f3eaae785387b31d371d252e840b32a
          imagePullPolicy: Always
          ports:
            - containerPort: 4009
          readinessProbe:
            httpGet:
              path: /health
              port: 4009
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4009
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: content-service
  namespace: els-ai
spec:
  selector:
    app: content-service
  ports:
    - name: http
      port: 4009
      targetPort: 4009
