k8s-config-repo/media-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
      labels:
        app: media-api
    spec:
      containers:
        - name: media-api
          image: harishdell/els-ai-media-api:sha-54a54bc
          imagePullPolicy: Always
          ports:
            - containerPort: 4004
          readinessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: media-api
  namespace: els-ai
spec:
  selector:
    app: media-api
  ports:
    - name: http
      port: 4004
      targetPort: 4004
