k8s-config-repo/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:      
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: harishdell/els-ai-notification-service:a9c3d2a28c8132873374c48d52417f1880637431
          imagePullPolicy: Always
          ports:
            - containerPort: 4013
          readinessProbe:
            httpGet:
              path: /health
              port: 4013
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4013
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: els-ai
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 4013
      targetPort: 4013
