k8s-config-repo/org-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: org-service
  template:
    metadata:
      labels:
        app: org-service
    spec:
      containers:
        - name: org-service
          image: harishdell/els-ai-org-service:1d82abc9f55d2e25f322078e6f6467afceb8e443
          imagePullPolicy: Always
          ports:
            - containerPort: 4012
          readinessProbe:
            httpGet:
              path: /health
              port: 4012
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4012
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: org-service
  namespace: els-ai
spec:
  selector:
    app: org-service
  ports:
    - name: http
      port: 4012
      targetPort: 4012
