k8s-config-repo/topic-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topic-service
  namespace: els-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topic-service
  template:
    metadata:
      labels:
        app: topic-service
    spec:
      containers:
        - name: topic-service
          image: harishdell/els-ai-topic-service:a4f348f311ca3c0c3d06c97eebc01333a78f84d3
          imagePullPolicy: Always
          ports:
            - containerPort: 4010
          readinessProbe:
            httpGet:
              path: /health
              port: 4010
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4010
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: topic-service
  namespace: els-ai
spec:
  selector:
    app: topic-service
  ports:
    - name: http
      port: 4010
      targetPort: 4010
